[package]
name = "kou"
version = "0.0.1"
authors = ["Adam <classygopher@gmail.com>"]
edition = "2018"
description = "Audio playback library designed with game engines in mind"
repository = "https://github.com/Adamcake/Kou/"
license = "GPL-2.0-only"
keywords = ["audio", "gamedev", "playback"]
include = ["src/**/*", "Cargo.toml"]

[features]
wav = []

[[bin]]
name = "file_wav"
required-features = ["wav"]
